# papermake-aws

./: .gitignore  Cargo.toml  README.md  justfile  run_perf_test.py
lambda_functions/: .envrc  Cargo.toml  justfile
lambda_functions/renderer/: Cargo.toml  justfile
lambda_functions/renderer/src/: main.rs
lambda_functions/request_handler/: Cargo.toml  justfile
lambda_functions/request_handler/src/: main.rs
lambda_functions/src/: main.rs
papermake-orchestrator/: Cargo.toml  README.md
papermake-orchestrator/src/: http_handler.rs  main.rs
papermake-renderer/: Cargo.toml  README.md
papermake-renderer/src/: event_handler.rs
pdf_perf_test/: __init__.py  cli.py  config.py  main.py
pdf_perf_test/core/: __init__.py  load_tester.py  runner.py  verifier.py
pdf_perf_test/utils/: __init__.py  data_generator.py  logging.py
send_requests/: generate_sample_data.py  requirements.txt  response.txt  sample_trade_data.json  send_fake_request.py  send_fake_requests.py
terraform/environments/dev/: backend.tfvars  main.tf
terraform/modules/pdf_renderer/: iam.tf  main.tf  outputs.tf  variables.tf
terraform/modules/pdf_service/: iam.tf  main.tf  outputs.tf  variables.tf
