[package]
name = "pdf-renderer"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "0.56"
aws-sdk-s3 = "0.34"
aws-sdk-sqs = "0.34"
aws_lambda_events = { version = "0.16", features = ["apigw"] }
base64 = "0.21"
lambda_runtime = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
uuid = { version = "1.0", features = ["v4"] }
papermake = { path = "../../papermake-rs/crates/papermake", default-features = false }
thiserror = "2.0.12"

[[bin]]
name = "bootstrap"
path = "src/main.rs" 
