[package]
name = "papermake-orchestrator"
version = "0.1.0"
edition = "2021"

[dependencies]
# aws
aws-config = "0.57.1"
aws-sdk-config = "0.35.0"
aws-sdk-sqs = "0.35.0"

lambda_http = "0.13.0"
lambda_runtime = "0.13.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

tokio = { version = "1", features = ["macros"] }
