[package]
name = "pdf-renderer"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1"
aws_lambda_events = { version = "1", features = ["lambda_function_urls"] }
lambda_runtime = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "registry"] }
opentelemetry = "0.32"
opentelemetry_sdk = { version = "0.32", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.32", default-features = false, features = [
    "trace",
    "http-proto",
    "reqwest-blocking-client",
    "reqwest-rustls",
] }
tracing-opentelemetry = "0.33"
uuid = { version = "1", features = ["v4"] }
papermake = { version = "0.1.0", default-features = false }
thiserror = "2"
futures = "0.3"

[[bin]]
name = "renderer"
path = "src/main.rs"
